# susi

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.staging.yml  docker-compose.yml
cpp/: CMakeLists.txt  conanfile.py  susi.cpp  susi.h
cpp/include/: susi.h
cpp/src/: susi.cpp
cpp/test_package/: CMakeLists.txt  conanfile.py  conanfile_build.py  main.cpp
crates/susi_admin/src/: main.rs
crates/susi_client/: Cargo.toml
crates/susi_client/src/: binary_signing.rs  lib.rs  workspace.rs
crates/susi_core/: Cargo.toml
crates/susi_core/src/: crypto.rs  db.rs  error.rs  features.rs  fingerprint.rs  lib.rs  license.rs  properties.rs  usb.rs
crates/susi_helper/: Cargo.toml
crates/susi_helper/src/: main.rs
crates/susi_server/: Cargo.toml  build.rs
crates/susi_server/src/: dashboard.html  docs.html  docs.rs  email.rs  invoice_pdf.rs  main.rs  shop.rs  website.html  website.rs
crates/susi_server/tests/: integration.rs
scripts/: create-test-codesign-cert.ps1  create-test-codesign-cert.sh  remove-test-codesign-cert.ps1  sign-and-test.ps1  sign-binary.ps1
