[package]
name = "susi_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "susi-server"
path = "src/main.rs"

[dependencies]
susi_core = { path = "../susi_core", features = ["db"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rsa = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
argon2 = "0.5"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["qr"] }
rand = "0.8"
