[package]
name = "susi_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "susi-server"
path = "src/main.rs"

[dependencies]
susi_core = { path = "../susi_core", features = ["db"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rsa = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
argon2 = "0.5"
jsonwebtoken = "9"
totp-rs = { version = "5", features = ["qr"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hmac = "0.12"
url = "2"
printpdf = { version = "0.7", default-features = false, features = ["embedded_images"] }
